force-app/main/default/objects/Customer_Satisfaction_Survey__c/Customer_Satisfaction_Survey__c.object-meta.xml
<CustomObject>
    <description>Results from customer surveys</description>
    <label>Customer Satisfaction Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>